Arrange CSS code

--- a/data-tables.html
+++ b/data-tables.html
@@ -38,12 +38,12 @@
 
     /* FIRST TABLE: Highlights the entire table row when hovering over the first column */
     /* These styles targets Gmail and Yahoo! email clients */
-    .row1:hover + td, .row1:hover + td + td, .row1:hover + td + td + td, .row1:hover,
-    .row2:hover + td, .row2:hover + td + td, .row2:hover + td + td + td, .row2:hover,
-    .row3:hover + td, .row3:hover + td + td, .row3:hover + td + td + td, .row3:hover,
-    .row4:hover + td, .row4:hover + td + td, .row4:hover + td + td + td, .row4:hover,
-    .row5:hover + td, .row5:hover + td + td, .row5:hover + td + td + td, .row5:hover,
-    .row6:hover + td, .row6:hover + td + td, .row6:hover + td + td + td, .row6:hover,
+    .row1:hover, .row1:hover + td, .row1:hover + td + td, .row1:hover + td + td + td,
+    .row2:hover, .row2:hover + td, .row2:hover + td + td, .row2:hover + td + td + td,
+    .row3:hover, .row3:hover + td, .row3:hover + td + td, .row3:hover + td + td + td,
+    .row4:hover, .row4:hover + td, .row4:hover + td + td, .row4:hover + td + td + td,
+    .row5:hover, .row5:hover + td, .row5:hover + td + td, .row5:hover + td + td + td,
+    .row6:hover, .row6:hover + td, .row6:hover + td + td, .row6:hover + td + td + td,
     /* Following code highlights individual table cells */
     .row1 + td:hover, .row1 + td + td:hover, .row1 + td + td + td:hover,
     .row2 + td:hover, .row2 + td + td:hover, .row2 + td + td + td:hover,
@@ -55,12 +55,12 @@
     }
 
     /* SECOND TABLE: Highlights the entire table row when hovering over the first column */
-    .row7:hover + td, .row7:hover + td + td, .row7:hover + td + td + td, .row7:hover,
-    .row8:hover + td, .row8:hover + td + td, .row8:hover + td + td + td, .row8:hover,
-    .row9:hover + td, .row9:hover + td + td, .row9:hover + td + td + td, .row9:hover,
-    .row10:hover + td, .row10:hover + td + td, .row10:hover + td + td + td, .row10:hover,
-    .row11:hover + td, .row11:hover + td + td, .row11:hover + td + td + td, .row11:hover,
-    .row12:hover + td, .row12:hover + td + td, .row12:hover + td + td + td, .row12:hover,
+    .row7:hover, .row7:hover + td, .row7:hover + td + td, .row7:hover + td + td + td,
+    .row8:hover, .row8:hover + td, .row8:hover + td + td, .row8:hover + td + td + td,
+    .row9:hover, .row9:hover + td, .row9:hover + td + td, .row9:hover + td + td + td,
+    .row10:hover, .row10:hover + td, .row10:hover + td + td, .row10:hover + td + td + td,
+    .row11:hover, .row11:hover + td, .row11:hover + td + td, .row11:hover + td + td + td,
+    .row12:hover, .row12:hover + td, .row12:hover + td + td, .row12:hover + td + td + td,
     /* Following code highlights individual table cells */
     .row7 + td:hover, .row7 + td + td:hover, .row7 + td + td + td:hover,
     .row8 + td:hover, .row8 + td + td:hover, .row8 + td + td + td:hover,
